--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\12.1\\tomcat90.properties
-j2ee.server.home=C:/Users/mcris/Downloads/apache-tomcat-10.0.6-windows-x64/apache-tomcat-10.0.6
-j2ee.server.instance=tomcat90:home=C:\\Users\\mcris\\Downloads\\apache-tomcat-10.0.6-windows-x64\\apache-tomcat-10.0.6
-user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+deploy.ant.properties.file=/home/johnny/.netbeans/11.0/tomcat80.properties
+j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
+j2ee.server.instance=tomcat80:home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
+user.properties.file=/home/johnny/.netbeans/11.0/build.properties
