--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=/home/johnny/.netbeans/11.0/tomcat80.properties
-j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
-j2ee.server.instance=tomcat80:home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
-user.properties.file=/home/johnny/.netbeans/11.0/build.properties
+deploy.ant.properties.file=C:\\Users\\Jarlin\\AppData\\Roaming\\NetBeans\\12.5\\tomcat80.properties
+j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\apache-tomcat-8.5.60
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=C:\\Users\\Jarlin\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
