--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Jarlin\\AppData\\Roaming\\NetBeans\\12.5\\tomcat80.properties
-j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\apache-tomcat-8.5.60
-javac.debug=true
-javadoc.preview=true
-selected.browser=Chrome
-user.properties.file=C:\\Users\\Jarlin\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\12.1\\tomcat90.properties
+j2ee.server.home=C:/Users/mcris/Downloads/apache-tomcat-10.0.6-windows-x64/apache-tomcat-10.0.6
+j2ee.server.instance=tomcat90:home=C:\\Users\\mcris\\Downloads\\apache-tomcat-10.0.6-windows-x64\\apache-tomcat-10.0.6
+user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
