--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,7 +59,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.javaee-web-api-8.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${libs.eclipselink.classpath}
     ${file.reference.lib-eclipselink}:\
     ${file.reference.lib-javaee-endorsed-api-7.0}:\
     ${libs.eclipselink.classpath}
