--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-
+    <filter>
+        <filter-name>dontCacheFilter.do</filter-name>
+        <filter-class>ControladorVistas.dontCacheFilter</filter-class>
+        <init-param>
+            <param-name>jsp</param-name>
+            <param-value>*.jsp</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>dontCacheFilter.do</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>IniciarSesion</servlet-name>
         <servlet-class>ControladorVistas.IniciarSesion</servlet-class>
@@ -8,6 +19,18 @@
     <servlet>
         <servlet-name>Registro</servlet-name>
         <servlet-class>ControladorVistas.Registro</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>cerrarSesion</servlet-name>
+        <servlet-class>ControladorVistas.cerrarSesion</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MostrarProductos</servlet-name>
+        <servlet-class>ControladorVistas.MostrarProductos</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MostrarServiciosUsu</servlet-name>
+        <servlet-class>ControladorVistas.MostrarServiciosUsu</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
@@ -17,9 +40,21 @@
         <servlet-name>Registro</servlet-name>
         <url-pattern>/Registro.do</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>cerrarSesion</servlet-name>
+        <url-pattern>/cerrarSesion.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MostrarProductos</servlet-name>
+        <url-pattern>/MostrarProductos.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MostrarServiciosUsu</servlet-name>
+        <url-pattern>/MostrarServiciosUsu.do</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
-            30
+            5
         </session-timeout>
     </session-config>
 </web-app>
