--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -12,15 +12,15 @@ deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetB
 file.reference.javaee-web-api-8.0.jar=E:\\2021-2\\API\\PROYECTO\\aplicativoWebLubrillantasJezreelAg\\javaee-web-api-8.0.jar
 j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
-j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 
 j2ee.server.home=C:/apache-tomcat-9.0.54-windows-x64/apache-tomcat-9.0.54
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
@@ -62,8 +62,8 @@ j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apac
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 
-deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
@@ -74,11 +74,11 @@ javadoc.preview=true
 selected.browser=default
 user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
-selected.browser=default
+selected.browser=Chrome
 
 user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
-user.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
