--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,7 @@ file.reference.javaee-web-api-8.0.jar-1=javaee-web-api-8.0.jar
 file.reference.lib-eclipselink=lib/eclipselink
 file.reference.mysql-connector-java-8.0.25.jar=mysql-connector-java-8.0.25.jar
 includes=**
-j2ee.compile.on.save=false
+j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=false
 j2ee.platform=1.7-web
