--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -40,6 +40,14 @@
             <param-value>*</param-value>
         </init-param>
     </servlet>
+    <servlet>
+        <servlet-name>MisVehiculos</servlet-name>
+        <servlet-class>ControladorVistas.MisVehiculos</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EliminarVehiculoUser</servlet-name>
+        <servlet-class>ControladorVistas.EliminarVehiculoUser</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
         <url-pattern>/IniciarSesion.do</url-pattern>
@@ -63,6 +71,14 @@
     <servlet-mapping>
         <servlet-name>dontCookie</servlet-name>
         <url-pattern>/dontCookie.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MisVehiculos</servlet-name>
+        <url-pattern>/MisVehiculos.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EliminarVehiculoUser</servlet-name>
+        <url-pattern>/EliminarVehiculoUser.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
