--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -14,13 +14,13 @@ j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apac
 
 
 
-j2ee.server.home=C:/apache-tomcat-9.0.54-windows-x64/apache-tomcat-9.0.54
-j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
+j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
+j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
