Agregado servicios home y servicios admin

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -21,9 +21,6 @@ j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
-j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
-j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
-j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
@@ -50,6 +47,9 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.2
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
