mandando citas en un array a js

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ excludes=
 
 
 
+file.reference.gson-2.8.2.jar=..\\..\\..\\Downloads\\jar_files (3)\\gson-2.8.2.jar
 file.reference.javaee-web-api-8.0.jar=lib/javaee-web-api-8.0.jar
 file.reference.javaee-web-api-8.0.jar-1=javaee-web-api-8.0.jar
 file.reference.lib-eclipselink=lib/eclipselink
@@ -54,7 +55,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.javaee-web-api-8.0.jar-1}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.gson-2.8.2.jar}
     ${file.reference.javaee-web-api-8.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
     ${libs.eclipselink.classpath}
