--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,7 +11,6 @@ j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0
 deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 file.reference.javaee-web-api-8.0.jar=E:\\2021-2\\API\\PROYECTO\\aplicativoWebLubrillantasJezreelAg\\javaee-web-api-8.0.jar
 j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/apache-tomcat-9.0.54-windows-x64/apache-tomcat-9.0.54
 
 
 
@@ -27,6 +26,7 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.2
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
