--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -20,13 +20,6 @@ j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apac
 
 
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
-j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
-j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
-j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
-j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
@@ -56,6 +49,13 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.2
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Users/mcris/Downloads/apache-tomcat-10.0.6-windows-x64/apache-tomcat-10.0.6
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
