--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,7 +6,30 @@
     </filter>
     <filter-mapping>
         <filter-name>validarSesion.do</filter-name>
+        <url-pattern>/jsp/FichaTecnicaAdd.jsp</url-pattern>
+        <url-pattern>/jsp/adminClientes.jsp</url-pattern>
+        <url-pattern>/jsp/adminregis.jsp</url-pattern>
+        <url-pattern>/jsp/citasAdmin.jsp</url-pattern>
+        <url-pattern>/jsp/citasUsu.jsp</url-pattern>
+        <url-pattern>/jsp/editarCitaUsu.jsp</url-pattern>        
+        <url-pattern>/jsp/fichaTecnica.jsp</url-pattern>
+        <url-pattern>/jsp/productosAdmin.jsp</url-pattern>
+        <url-pattern>/jsp/serviciosAdmin.jsp</url-pattern>
+        <url-pattern>/jsp/serviciosUsu.jsp</url-pattern>
+        <url-pattern>/jsp/vehiculos.jsp</url-pattern>
+        <url-pattern>/ActualizarProducto.do</url-pattern>
+        <url-pattern>/ActualizarServicio.do</url-pattern>
+        <url-pattern>/AdminAddProducto.do</url-pattern>
+        <url-pattern>/AdminAddServicio.do</url-pattern>
+        <url-pattern>/EliminarProducto.do</url-pattern>
+        <url-pattern>/EliminarServicio.do</url-pattern>
+        <url-pattern>/EliminarVehiculoUser.do</url-pattern>
+        <url-pattern>/MisServiciosUsu.do</url-pattern>        
         <url-pattern>/MisVehiculos.do</url-pattern>
+        <url-pattern>/MostrarProductosAdmin.do</url-pattern>
+        <url-pattern>/MostrarServiciosAdmin.do</url-pattern>
+        <url-pattern>/adminAddCliente.do</url-pattern>
+        <url-pattern>/adminUpdateCliente.do</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>IniciarSesion</servlet-name>
@@ -68,6 +91,22 @@
         <servlet-name>AdminAddServicio</servlet-name>
         <servlet-class>ControladorVistas.AdminAddServicio</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MostrarProductosAdmin</servlet-name>
+        <servlet-class>ControladorVistas.MostrarProductosAdmin</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AdminAddProducto</servlet-name>
+        <servlet-class>ControladorVistas.AdminAddProducto</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ActualizarProducto</servlet-name>
+        <servlet-class>ControladorVistas.ActualizarProducto</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EliminarProducto</servlet-name>
+        <servlet-class>ControladorVistas.EliminarProducto</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
         <url-pattern>/IniciarSesion.do</url-pattern>
@@ -127,6 +166,22 @@
     <servlet-mapping>
         <servlet-name>AdminAddServicio</servlet-name>
         <url-pattern>/AdminAddServicio.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MostrarProductosAdmin</servlet-name>
+        <url-pattern>/MostrarProductosAdmin.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AdminAddProducto</servlet-name>
+        <url-pattern>/AdminAddProducto.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ActualizarProducto</servlet-name>
+        <url-pattern>/ActualizarProducto.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EliminarProducto</servlet-name>
+        <url-pattern>/EliminarProducto.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>5</session-timeout>
