--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -68,6 +68,14 @@
         <servlet-name>AdminAddServicio</servlet-name>
         <servlet-class>ControladorVistas.AdminAddServicio</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MostrarFichaTecnica</servlet-name>
+        <servlet-class>ControladorVistas.MostrarFichaTecnica</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateVehiculo</servlet-name>
+        <servlet-class>ControladorVistas.UpdateVehiculo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
         <url-pattern>/IniciarSesion.do</url-pattern>
@@ -127,6 +135,14 @@
     <servlet-mapping>
         <servlet-name>AdminAddServicio</servlet-name>
         <url-pattern>/AdminAddServicio.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MostrarFichaTecnica</servlet-name>
+        <url-pattern>/MostrarFichaTecnica.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateVehiculo</servlet-name>
+        <url-pattern>/UpdateVehiculo.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>5</session-timeout>
