--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -30,6 +30,8 @@
         <url-pattern>/MostrarServiciosAdmin.do</url-pattern>
         <url-pattern>/adminAddCliente.do</url-pattern>
         <url-pattern>/adminUpdateCliente.do</url-pattern>
+        <url-pattern>/ConfirmaServicioAdmin.do</url-pattern>
+        <url-pattern>/ConfirmaAsistenciaAdmin.do</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>IniciarSesion</servlet-name>
@@ -96,13 +98,14 @@
         <servlet-class>ControladorVistas.AdminAddServicio</servlet-class>
     </servlet>
     <servlet>
-
-        <servlet-name>ConfirmaCitaAdmin</servlet-name>
+        <servlet-name>ConfirmaAsistenciaAdmin</servlet-name>
         <servlet-class>ControladorVistas.ConfirmaAsistenciaAdmin</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ConfirmaServicioAdmin</servlet-name>
         <servlet-class>ControladorVistas.ConfirmaServicioAdmin</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>MostrarProductosAdmin</servlet-name>
         <servlet-class>ControladorVistas.MostrarProductosAdmin</servlet-class>
     </servlet>
@@ -191,12 +194,14 @@
         <url-pattern>/AdminAddServicio.do</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>ConfirmaCitaAdmin</servlet-name>
-        <url-pattern>/ConfirmaCitaAdmin.do</url-pattern>
+        <servlet-name>ConfirmaAsistenciaAdmin</servlet-name>
+        <url-pattern>/ConfirmaAsistenciaAdmin.do</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ConfirmaServicioAdmin</servlet-name>
         <url-pattern>/ConfirmaServicioAdmin.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>MostrarProductosAdmin</servlet-name>
         <url-pattern>/MostrarProductosAdmin.do</url-pattern>
     </servlet-mapping>
@@ -221,6 +226,6 @@
         <url-pattern>/UpdateVehiculo.do</url-pattern>
     </servlet-mapping>
     <session-config>
-        <session-timeout>5</session-timeout>
+        <session-timeout>15</session-timeout>
     </session-config>
 </web-app>
