--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -26,7 +26,6 @@ j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apac
 
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
-j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
@@ -87,6 +86,7 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.2
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
@@ -134,8 +134,8 @@ deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\to
 j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
@@ -148,7 +148,7 @@ user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
 
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+selected.browser=default
 
 user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
@@ -168,5 +168,5 @@ user.properties.file=C:\\Users\\Jarlin\\AppData\\Roaming\\NetBeans\\12.5\\build.
 user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
-user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
