--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -19,19 +19,10 @@ j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apac
 
 
 
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
@@ -116,6 +107,15 @@ j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
@@ -172,8 +172,8 @@ deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\to
 deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
-deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
 
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
@@ -191,7 +191,7 @@ user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
 
-selected.browser=default
+selected.browser=Chrome.INTEGRATED
 
 user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
@@ -215,6 +215,6 @@ user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.pr
 
 user.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
 
-user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
