--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 deploy.ant.properties.file=/home/johnny/.netbeans/11.0/tomcat80.properties
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.instance=tomcat80:home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
+user.properties.file=/home/johnny/.netbeans/11.0/build.properties
