--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -178,14 +178,18 @@
     <servlet>
         <servlet-name>MostrarEstadisticas</servlet-name>
         <servlet-class>ControladorVistas.MostrarEstadisticas</servlet-class>
-        </servlet>
-        <servlet>
+    </servlet>
+    <servlet>
         <servlet-name>ValoresEstadisticas</servlet-name>
         <servlet-class>ControladorVistas.ValoresEstadisticas</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>MostrarServiciosCotizacion</servlet-name>
         <servlet-class>ControladorVistas.MostrarServiciosCotizacion</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>tipoReporte</servlet-name>
+        <servlet-class>ControladorVistas.tipoReporte</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
@@ -334,14 +338,18 @@
     <servlet-mapping>
         <servlet-name>MostrarEstadisticas</servlet-name>
         <url-pattern>/MostrarEstadisticas.do</url-pattern>
-        </servlet-mapping>
-        <servlet-mapping>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>ValoresEstadisticas</servlet-name>
         <url-pattern>/ValoresEstadisticas.do</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>MostrarServiciosCotizacion</servlet-name>
         <url-pattern>/MostrarServiciosCotizacion.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>tipoReporte</servlet-name>
+        <url-pattern>/tipoReporte.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>35</session-timeout>
